# Lumina

./: .gitignore  CLAUDE.md  MANUAL_TESTING.md  README.md  lumina.spec  lumina_linux.spec  lumina_macos.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/cli/: main.py
app/core/: c_bridge.py  dedup.py  disk_detector.py  file_carver.py  fs_parser.py  gemini_assistant.py  i18n.py  platform.py  recovery.py  settings.py
app/core/native/: __init__.py  anomaly.py  client.py  protocol.py  settings.py
app/core/repair/: jpeg_repair.py  mp4_repair.py
app/plugins/carvers/: base_plugin.py  jpeg_plugin.py  mp4_plugin.py  pdf_plugin.py  raw_plugin.py  sqlite_plugin.py  zip_plugin.py
app/ui/: main_window.py  palette.py  repair_dialog.py  screen_home.py  screen_partitions.py  screen_repair.py  screen_results.py  screen_scan.py  screen_sd_card.py  screen_tools.py  setup_wizard.py  styles.qss
app/workers/: _demo.py  scan_worker.py
assets/: lumina.desktop
benchmarks/results/: internal_bench_c_luminabench.json  internal_bench_c_luminabench_nocopy.json  internal_bench_onedrive.json  internal_bench_prefix_c_luminabench.json  native_phase3_1777290329.json  native_phase3_1777294484.json  native_phase3_1777301544.json  native_phase3_1777305418.json  native_phase3_1777305707.json  profile_breakdown_c_luminabench.json  profile_breakdown_onedrive.json
docs/: CROSS_PLATFORM_AUDIT.md
native/lumina_scan/: Cargo.toml
native/lumina_scan/src/: control.rs  errors.rs  (+6 more)
scripts/: bench_carver.py  bench_native_carver.py  build.py  install_linux.sh
tests/: conftest.py  test_apfs_parser.py  test_c_bridge.py  test_cli.py  test_disk_detector.py  test_e2e_recovery.py  test_exfat_parser.py  test_ext4_parser.py  test_extraction_guards.py  test_fat32_parser.py  test_file_carver.py  test_fs_parser_ntfs.py  test_hfsplus_parser.py  test_jpeg_repair.py  test_mp4_repair.py  test_native_anomaly.py  test_native_client.py  test_native_parity.py  test_native_protocol.py  test_product_real_app.py  test_repair_diagnose.py  test_scan_worker_native.py
(+1 files in other folders)
