[project]
name = "lumina"
version = "1.1.0"
description = "Lumina — Data Recovery for Windows, macOS, and Linux"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "psutil>=5.9.0",
]

[project.scripts]
lumina = "app.cli.main:main"

[project.optional-dependencies]
windows = [
    "wmi>=1.5.1",
    "pywin32>=306",
]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-qt",
    "pytest-cov",
]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "__pycache__",
    "*.egg-info",
    ".git",
    "logs",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults
    "RUF012", # mutable class variables (PyQt signals are fine)
    "N802",   # PyQt6 virtual method overrides must match Qt's camelCase API
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── MyPy (type checker) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.core.*"
disallow_untyped_defs = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
qt_api = "pyqt6"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["app/ui/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
